Version: 1.3.0
Date: ????
  Features:
    - Added keyboard shortcuts for changing categories in the search GUI
    - The shortcut button properly toggles the search GUI open/closed, instead of just opening it
  Changes:
    - Refactored mod structure to improve performance and simplicity
    - Switched from RaiLuaLib to FLib
    - Changing search categories will no longer reset the textfield to blank
    - Transport drones recipes are now excluded from the Recipe Book
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 2020-04-12
  Changes:
    - Converted all strings to double quotes
    - Removed search button from next to close button (it will come back as an ACTUAL search button later)
    - Translations are no longer performed on every join. If you change languages, simply use the /retranslate-all-dictionaries command to retranslate your dictionaries
  Bugfixes:
    - Fixed crash when using RaiLuaLib 0.2.4
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 2020-04-09
  Changes:
    - Updated to RaiLuaLib 0.2.3
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2020-04-03
  Features:
    - Added fuzzy search option
  Changes:
    - Marked Death Markers as incompatible, because it somehow causes this mod to desync in multiplayer
  Bugfixes:
    - Added an error catch for a common error that I cannot reproduce. It gives instructions on how to report the error, and prints several helpful things to a file.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2020-04-01
  Features:
    - You can now open multiple recipe quick reference windows simultaneously
    - Using the search hotkey while holding an item will open that item's material page, if one exists