@@ -49,5 +49,6 @@ return {
     ["storage-tank"] = true
   },
   open_gui_event = event.generate_id(),
-  reopen_source_event = event.generate_id()
+  reopen_source_event = event.generate_id(),
+  warning_red_color = "255,142,142" -- from __core__.prototypes.style
 }
