@@ -49,10 +49,6 @@ return {
       searching_players_count = 0
     }
 
-    global.flags = {
-      searching = false
-    }
-
     for i in pairs(game.players) do
       local player_table = global.players[i]
       player_table.dictionary = nil
