@@ -43,6 +43,7 @@ function player_data.update_settings(player, player_table)
   player_table.settings = {
     default_category = mod_settings["rb-default-search-category"].value,
     show_hidden = mod_settings["rb-show-hidden-objects"].value,
+    show_unavailable = mod_settings["rb-show-unavailable-objects"].value,
     use_fuzzy_search = mod_settings["rb-use-fuzzy-search"].value
   }
 end
