@@ -7,6 +7,7 @@ Date: ????
   Changes:
     - Refactored mod structure to improve performance and simplicity
     - Switched from RaiLuaLib to FLib
+    - Search is now spread out over multiple ticks to save performance and allow the addition of more complex features
     - Changing search categories will no longer reset the textfield to blank
     - Transport drones recipes are now excluded from the Recipe Book
 ---------------------------------------------------------------------------------------------------
